--- a/home-admin.html
+++ b/home-admin.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home for Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="resource/css/home-admin.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ruda:wght@400..900&family=Tilt+Warp&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home for Admin</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="resource/css/home-admin.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ruda:wght@400..900&family=Tilt+Warp&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
 </head>
+
 <body>
 
- <!-- 1st nav -->
-<nav class="navbar navbar-expand-lg">
-  <a class="navbar-brand" href="#">
-    <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png" alt="CEU Molecules Logo"/>
-  </a>
-  
-  <button class="navbar-toggler me-3 custom-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  
-  <div class="d-none d-lg-block ms-auto">
+  <!-- 1st nav -->
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">
+      <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png" alt="CEU Molecules Logo" />
+    </a>
+
+    <button class="navbar-toggler me-3 custom-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="d-none d-lg-block ms-auto">
       <ul class="navbar-nav pe-3">
         <li class="nav-item">
           <a class="nav-link text-white" href="#">Requests</a>
@@ -42,119 +48,123 @@
           <a class="nav-link text-white" href="#">Report</a>
         </li>
       </ul>
-  </div>
-
-  <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
-      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
-    <div class="offcanvas-body">
-      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Requests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Inventory</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Report</a>
-        </li>
-      </ul>
+
+    <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Requests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Inventory</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#">Report</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 
-<!-- main content -->
-<main class="home-admin">
+  <!-- main content -->
+  <main class="home-admin">
     <div class="container">
       <h2 class="requests-heading">Requests</h2>
       <div class="filter-buttons">
-            <button class="filter-btn active">ALL</button>
-            <button class="filter-btn">Faculty Approved</button>
-            <button class="filter-btn">For Pick-up</button>
-            <button   class="filter-btn">Completed</button>
-            <button class="filter-btn">Returned</button>
-            <button class="filter-btn">Canceled</button>
-            <button class="filter-btn">Disapproved</button>
+        <button class="filter-btn active">ALL</button>
+        <button class="filter-btn">Faculty Approved</button>
+        <button class="filter-btn">For Pick-up</button>
+        <button class="filter-btn">Completed</button>
+        <button class="filter-btn">Returned</button>
+        <button class="filter-btn">Canceled</button>
+        <button class="filter-btn">Disapproved</button>
+      </div>
+      <div class="row">
+        <div class="col-12 mb-3">
+          <div class="request-card">
+            <div class="request-details-container">
+              <div class="request-text">
+                <h5 class="request-title">Request Received!</h5>
+                <p class="request-info">From: Renz Magsakay (Student)</p>
+                <p class="request-info">Status: Faculty Approved</p>
+              </div>
+            </div>
+            <div class="right-column-container">
+              <div class="request-timestamp">
+                <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+              </div>
+              <div class="view-button-container">
+                <button class="view-button-btn">View</button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-12 mb-3">
-                <div class="request-card">
-                  <div class="request-details-container">
-                        <div class="request-text">
-                            <h5 class="request-title">Request Received!</h5>
-                            <p class="request-info">From: Renz Magsakay (Student)</p>
-                            <p class="request-info">Status: Faculty Approved</p>
-                        </div>
-                      </div>
-                        <div class="right-column-container">
-                          <div class="request-timestamp">
-                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
-                        </div>
-                        <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
-            <div class="col-12 mb-3">
-                <div class="request-card">
-                  <div class="request-details-container">
-                        <div class="request-text">
-                            <h5 class="request-title">Request Received!</h5>
-                            <p class="request-info">From: Renz Magsakay (Student)</p>
-                            <p class="request-info">Status: Faculty Approved</p>
-                        </div>
-                      </div>
-                        <div class="right-column-container">
-                          <div class="request-timestamp">
-                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
-                        </div>
-                        <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-            <div class="col-12 mb-3">
-                <div class="request-card">
-                  <div class="request-details-container">
-                        <div class="request-text">
-                            <h5 class="request-title">Request Received!</h5>
-                            <p class="request-info">From: Renz Magsakay (Student)</p>
-                            <p class="request-info">Status: Faculty Approved</p>
-                        </div>
-                      </div>
-                        <div class="right-column-container">
-                          <div class="request-timestamp">
-                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
-                        </div>
-                        <div class="view-button-container">
-                          <button class="view-button-btn">View</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
+        <div class="col-12 mb-3">
+          <div class="request-card">
+            <div class="request-details-container">
+              <div class="request-text">
+                <h5 class="request-title">Request Received!</h5>
+                <p class="request-info">From: Renz Magsakay (Student)</p>
+                <p class="request-info">Status: Faculty Approved</p>
+              </div>
+            </div>
+            <div class="right-column-container">
+              <div class="request-timestamp">
+                <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+              </div>
+              <div class="view-button-container">
+                <button class="view-button-btn">View</button>
+              </div>
+            </div>
+          </div>
         </div>
+
+        <div class="col-12 mb-3">
+          <div class="request-card">
+            <div class="request-details-container">
+              <div class="request-text">
+                <h5 class="request-title">Request Received!</h5>
+                <p class="request-info">From: Renz Magsakay (Student)</p>
+                <p class="request-info">Status: Faculty Approved</p>
+              </div>
+            </div>
+            <div class="right-column-container">
+              <div class="request-timestamp">
+                <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+              </div>
+              <div class="view-button-container">
+                <button class="view-button-btn">View</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
-</main>
+  </main>
 
-<!-- footer -->
-<footer>
-  <div class="container-fluid">
-    <p class="text-center text-white pt-2"><small>
-      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
-      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
-      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
-      </small>
-    </p>
-  </div>
-</footer>
+  <!-- footer -->
+  <footer>
+    <div class="container-fluid">
+      <p class="text-center text-white pt-2"><small>
+          CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+          <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical
+            Laboratory</strong><br>
+          Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva
+            (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+        </small>
+      </p>
+    </div>
+  </footer>
 
 </body>
+
 </html>
